--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ide.rider": "3.0.28",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.xr.hands": "1.4.0-pre.1",
     "com.unity.xr.interaction.toolkit": "2.5.2",
