--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "3.0.28",
+    "com.unity.render-pipelines.universal": "12.1.12",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.visualeffectgraph": "12.1.12",
     "com.unity.xr.hands": "1.4.0-pre.1",
